--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-bt" class="light">
+<html lang="pt-bt">
   <head>
     <!--Tag responsável pelas configurações da página (não é visível ao usuário)-->
     <meta charset="UTF-8" />
@@ -19,13 +19,13 @@
     <div id="container">
       <div class="profile">
         <img
-          src="https://avatars.githubusercontent.com/u/78372920?v=4"
+          src="./assets/images/1.jpg"
           alt="Foto de Davi Lopes (Desenvolvedor da página)"
         />
         <a href="h">@techdavilopes</a>
       </div>
 
-      <div class="switch">
+      <div class="switch" onclick="toggleMode()">
         <button></button>
         <span></span>
       </div>
@@ -76,5 +76,7 @@
 
     <!--Responsável por fazer importação dos icons-->
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+    <!--Responsável por fazer importação do arquivo JS-->
+    <script src="./scripts.js"></script>
   </body>
 </html>
