3º commit (Ajustes em links + Adição de README)

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           src="./assets/images/1.jpg"
           alt="Foto de Davi Lopes (Desenvolvedor da página)"
         />
-        <a href="h">@techdavilopes</a>
+        <a href="https://www.instagram.com/techdavilopes/">@techdavilopes</a>
       </div>
 
       <div class="switch" onclick="toggleMode()">
@@ -33,16 +33,19 @@
       <div class="links">
         <ul>
           <li>
-            <a href="#" target="_blank">Inscrever-se no NLW</a>
+            <a href="#" target="_blank">Meu Portifólio</a>
           </li>
           <li>
-            <a href="#" target="_blank">Baixe meu e-book</a>
+            <a href="mailto:developer.davii@gmail.com" target="_blank"
+              >Meu E-mail</a
+            >
           </li>
           <li>
-            <a href="#" target="_blank">Veja meu portifólio</a>
-          </li>
-          <li>
-            <a href="#" target="_blank">Conheça o Explorer</a>
+            <a
+              href="https://wa.me/5591983590087/?text=Gostaria%20de%20agendar%20um%20bate-papo%20com%20você!"
+              target="_blank"
+              >Meu Telefone</a
+            >
           </li>
         </ul>
       </div>
@@ -54,7 +57,7 @@
         <a href="https://www.instagram.com/techdavilopes/" target="_blank"
           ><ion-icon class="size-icon" name="logo-instagram"></ion-icon
         ></a>
-        <a href="" target="_blank"
+        <a href="#" target="_blank"
           ><ion-icon class="size-icon" name="logo-youtube"></ion-icon
         ></a>
         <a
