5º commit (Ajustes altura + Adição de animações)

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="links">
         <ul>
           <li>
-            <a href="#" target="_blank">Meu Portifólio</a>
+            <a href="https://github.com/LopesDavi" target="_blank">Meu Portifólio</a>
           </li>
           <li>
             <a href="mailto:developer.davii@gmail.com" target="_blank"
